--- a/website/index.html
+++ b/website/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TIT</title>
-</head> ::FEES
+    <title>HTML tutorial</title>
+    <link rel="stylesheet" href="./style.css">
+</head > 
 <body>
-   ahjehejbgfgef  
-   <button>radio <canvas>!</canvas></button>
+    <h1 id="main" class="q">infinite</h1>
+<h2 id="main"class="ee">hiee everyone</h2>
+<h3 id="main"class="a">tutorial</h3>
+<p title="custom" class="abc">hiee everyone whatsapp buddy hope you all 
+    are good and sexy hie adaarsh kaise ho buddy
+</p>
+
+
+
+
+
+
+
+    <script src="./ind.js"></script>
 </body>
 </html>  
